# MSE22-3Sem-OpenGL

./: .gitignore  CMakeLists.txt
src/1-Fractals/: CMakeLists.txt
src/1-Fractals/Include/: FractalView.h
src/1-Fractals/Include/FractalRenderers/: BaseFractalRenderer.h  Mandelbrot.h
src/1-Fractals/Include/MoveFractalBehaviours/: MoveNearWindowSidesBehaviour.h
src/1-Fractals/Shaders/: mandelbrot.vert
src/1-Fractals/Sources/: FractalView.cpp  FrameCounter.cpp
src/1-Fractals/Sources/FractalRenderers/: Mandelbrot.cpp
src/1-Fractals/Sources/MoveFractalBehaviours/: DragBehaviour.cpp
src/2-Morphing/: CMakeLists.txt  resources.qrc
src/2-Morphing/Include/: BaseComponent.h  Camera.h  CameraView.h  InputHandler.h  LoadModelIterator.h  LoaderModel.h  ModelHolder.h  MorphingView.h  MoverOnArrows.h  Renderer.h  Scene.h  SceneNode.h  Transform.h
src/2-Morphing/Include/Lights/: BaseLight.h  DirectionalLight.h  LightsContainer.h  PointLight.h  SpotLight.h
src/2-Morphing/Models/: Sphere.glb  Two models.glb
src/2-Morphing/Shaders/: diffuse.frag  diffuse.vert
src/2-Morphing/Sources/: Camera.cpp  CameraView.cpp  InputHandler.cpp  LoadModelIterator.cpp  LoaderModel.cpp  ModelHolder.cpp  ModelHolderNew.cpp  MorphingView.cpp  MoverOnArrows.cpp  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.h  Renderer.cpp  Scene.cpp  SceneNode.cpp  Transform.cpp  main.cpp
src/2-Morphing/Sources/Lights/: DirectionalLight.cpp  PointLight.cpp  SpotLight.cpp
src/2.5-Deferred/: CMakeLists.txt  resources.qrc
src/2.5-Deferred/Include/: DeferredView.h  GBuffer.h  SSAOView.h
src/2.5-Deferred/Include/Lights/: BaseLightsContainer.h  DirectionalLight.h  DirectionalLightsContainer.h  PointLight.h  PointLightsContainer.h
src/2.5-Deferred/Shaders/: deferred.frag  directionalLight.frag  light.vert  pointLight.frag
src/2.5-Deferred/Sources/: DeferredView.cpp  GBuffer.cpp  SSAOView.cpp  main.cpp
src/2.5-Deferred/Sources/Lights/: DirectionalLight.cpp  DirectionalLightsContainer.cpp  PointLight.cpp  PointLightsContainer.cpp
src/3-SSAO/: CMakeLists.txt  resources.qrc
src/3-SSAO/Include/: GBuffer.h  SSAOView.h
src/3-SSAO/Models/: Sphere.glb
src/3-SSAO/Shaders/: PointLight.frag  blur.frag  blur.vert  deferred.frag  deferred.vert  directionalLight.frag  directionalLight.vert  pointLight.frag  ssao.frag  ssao.vert
src/3-SSAO/Sources/: GBuffer.cpp  SSAOView.cpp  main.cpp
src/4-Raytracing/: CMakeLists.txt
src/4-Raytracing/Include/: camera.h  scenes.h  utils.h
src/4-Raytracing/Include/Hittables/: hittable.h  hittable_list.h  model.h  sphere.h
src/4-Raytracing/Include/LoaderModels/: LoadModelIterator.h  LoaderModel.h
src/4-Raytracing/Include/Materials/: material.h
src/4-Raytracing/Include/Structures/: color.h  interval.h  ray.h  triangle3.h  vec3.h
src/4-Raytracing/Models/: Cube.glb  Plane.glb  Sphere.glb
src/4-Raytracing/Sources/: main.cpp
src/4-Raytracing/Sources/LoaderModels/: LoadModelIterator.cpp  LoaderModel.cpp
src/Base/: CMakeLists.txt  DebugWindow.cpp  DebugWindow.h  GLWidget.cpp  GLWidget.hpp  Time.cpp  Time.h
src/Base/Include/Deferred/: IGBuffer.h
src/Base/Include/Deferred/Lights/: BaseLightsContainer.h  DirectionalLight.h  DirectionalLightsContainer.h  PointLight.h  PointLightsContainer.h
src/Base/Include/LoaderModels/: LoadModelIterator.h  LoaderModel.h
src/Base/Include/SceneLogic/: BaseComponent.h  MoverOnArrows.h  Renderer.h  Scene.h  SceneNode.h  Transform.h
src/Base/Include/SceneLogic/Camera/: Camera.h  CameraView.h
src/Base/Include/Utils/: FrameCounter.h  InputHandler.h  OpenGLUniformBuffer.h  Time.h  ToggleSwitch.h
src/Base/Include/Views/: FieldsDrawer.h  InspectorView.h  ItemInHierarchy.h  SceneHierarchyView.h
src/Base/Sources/: GLWidget.cpp
src/Base/Sources/Deferred/Lights/: DirectionalLight.cpp  DirectionalLightsContainer.cpp  PointLight.cpp  PointLightsContainer.cpp
src/Base/Sources/LoaderModels/: LoadModelIterator.cpp  LoaderModel.cpp
src/Base/Sources/SceneLogic/: MoverOnArrows.cpp  Renderer.cpp  Scene.cpp  SceneNode.cpp  Transform.cpp
src/Base/Sources/SceneLogic/Camera/: Camera.cpp  CameraView.cpp
src/Base/Sources/Utils/: FrameCounter.cpp  InputHandler.cpp  OpenGLUniformBuffer.cpp  Time.cpp  ToggleSwitch.cpp
src/Base/Sources/Views/: FieldsDrawer.cpp  InspectorView.cpp  ItemInHierarchy.cpp  SceneHierarchyView.cpp
src/Fractals/: CMakeLists.txt  shaders.qrc
src/Fractals/Include/: DebugWindow.h  FractalView.h  FrameCounter.h
src/Fractals/Include/FractalRenderers/: BaseFractalRenderer.h  Mandelbrot.h
src/Fractals/Include/MoveFractalBehaviours/: BaseMoveBehaviour.h  DragBehaviour.h  MoveNearWindowSidesBehaviour.h
src/Fractals/Shaders/: mandelbrot.frag  mandelbrot.vert
src/Fractals/Sources/: DebugWindow.cpp  FractalView.cpp  FrameCounter.cpp  main.cpp
src/Fractals/Sources/FractalRenderers/: Mandelbrot.cpp
src/Fractals/Sources/MoveFractalBehaviours/: DragBehaviour.cpp  MoveNearWindowSidesBehaviour.cpp
